# sm-ai-rag-engine

./: .gitignore  README.md  pyproject.toml
dev_v1/: README.md  step0_preprocessing_design.ipynb  step1_query_rewrite_design.ipynb  step2_retriever_node_design.ipynb  step3_generator_node_design.ipynb
dev_v1/my_weaviate_data/advancedrag_chunk/p7GkcsqljZx0/: proplengths
dev_v1/my_weaviate_data/advancedrag_chunk/xW7CX3Mej3Nt/: proplengths
dev_v1/my_weaviate_data/raft/: raft.db
dev_v1/test_data/: sample.docx  sample.json  sample.txt  sample.xlsx
dev_v2/: README.md  __init__.py  main.py
dev_v2/config/: settings.py
dev_v2/graph/: workflow.py
dev_v2/nodes/: __init__.py  base.py  generator.py  query_rewrite.py  retriever.py  simple_generator.py
dev_v2/prompts/: __init__.py  templates.py
dev_v2/schemas/: __init__.py  models.py  preprocessing.py  state.py
dev_v2/services/: __init__.py  llm.py  reranker.py  vectorstore.py
dev_v2/services/preprocessing/: __init__.py  chunking.py  normalizer.py  parsers.py  pipeline.py
docs/: dev_v3_plan.md  dev_v3_roadmap.md  plus_docs.md
test-driven-design/: README.md  __init__.py  conftest.py
test-driven-design/e2e/: __init__.py  test_rag_application.py
test-driven-design/integration/: __init__.py  test_rag_pipeline.py  test_vectorstore_service.py  test_workflow_routing.py
test-driven-design/unit/: __init__.py  test_generator_node.py  test_llm_service.py  test_query_rewrite_node.py  test_reranker_service.py  test_retriever_node.py  test_simple_generator_node.py
(+21 files in other folders)
