[project]
name = "my-rag-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "sentence-transformers>=5.1.2",
    "weaviate>=0.1.2",
    "weaviate-client>=4.0.0",
]
